fix: change to identifier from provider
Signed-off-by: Julien Guitton <julien.guitton@doctolib.com>

--- a/package/crds/bigquery.gcp.m.upbound.io_analyticshublistingsubscriptions.yaml
+++ b/package/crds/bigquery.gcp.m.upbound.io_analyticshublistingsubscriptions.yaml
@@ -268,8 +268,6 @@ spec:
                           The geographic location where the dataset should reside.
                           See https://cloud.google.com/bigquery/docs/locations for supported locations.
                         type: string
-                    required:
-                    - location
                     type: object
                   listingId:
                     description: The ID of the listing. Must contain only Unicode
@@ -367,8 +365,6 @@ spec:
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
                     type: string
-                required:
-                - location
                 type: object
               initProvider:
                 description: |-
@@ -586,6 +582,11 @@ spec:
                           organize and group your datasets.
                         type: object
                         x-kubernetes-map-type: granular
+                      location:
+                        description: |-
+                          The geographic location where the dataset should reside.
+                          See https://cloud.google.com/bigquery/docs/locations for supported locations.
+                        type: string
                     type: object
                   listingId:
                     description: The ID of the listing. Must contain only Unicode
@@ -674,6 +675,10 @@ spec:
                             type: string
                         type: object
                     type: object
+                  location:
+                    description: The name of the location of the data exchange. Distinct
+                      from the location of the destination data set.
+                    type: string
                   project:
                     description: |-
                       The ID of the project in which the resource belongs.
@@ -743,6 +748,10 @@ spec:
               rule: '!(''*'' in self.managementPolicies || ''Create'' in self.managementPolicies
                 || ''Update'' in self.managementPolicies) || has(self.forProvider.destinationDataset)
                 || (has(self.initProvider) && has(self.initProvider.destinationDataset))'
+            - message: spec.forProvider.location is a required parameter
+              rule: '!(''*'' in self.managementPolicies || ''Create'' in self.managementPolicies
+                || ''Update'' in self.managementPolicies) || has(self.forProvider.location)
+                || (has(self.initProvider) && has(self.initProvider.location))'
           status:
             description: AnalyticsHubListingSubscriptionStatus defines the observed
               state of AnalyticsHubListingSubscription.
@@ -902,6 +911,9 @@ spec:
                     type: string
                   subscriberContact:
                     description: Email of the subscriber.
+                    type: string
+                  subscriptionId:
+                    description: The subscription id used to reference the subscription.
                     type: string
                 type: object
               conditions:
