--- a/examples-generated/cluster/bigquery/v1beta1/analyticshublistingsubscription.yaml
+++ b/examples-generated/cluster/bigquery/v1beta1/analyticshublistingsubscription.yaml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2025 The Crossplane Authors <https://crossplane.io>
+#
+# SPDX-License-Identifier: CC0-1.0
+
 apiVersion: bigquery.gcp.upbound.io/v1beta1
 kind: AnalyticsHubListingSubscription
 metadata:
@@ -12,8 +16,8 @@ spec:
       matchLabels:
         testing.upbound.io/example-name: subscription
     destinationDataset:
-    - datasetReference:
-      - datasetId: destination_dataset
+      datasetReference:
+        datasetId: destination_dataset
         projectIdSelector:
           matchLabels:
             testing.upbound.io/example-name: subscription
@@ -57,7 +61,7 @@ metadata:
 spec:
   forProvider:
     bigqueryDataset:
-    - datasetSelector:
+      datasetSelector:
         matchLabels:
           testing.upbound.io/example-name: subscription
     dataExchangeIdSelector:
