--- a/examples-generated/namespaced/bigquery/v1beta1/analyticshublistingsubscription.yaml
+++ b/examples-generated/namespaced/bigquery/v1beta1/analyticshublistingsubscription.yaml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2025 The Crossplane Authors <https://crossplane.io>
+#
+# SPDX-License-Identifier: CC0-1.0
+
 apiVersion: bigquery.gcp.m.upbound.io/v1beta1
 kind: AnalyticsHubListingSubscription
 metadata:
@@ -13,8 +17,8 @@ spec:
       matchLabels:
         testing.upbound.io/example-name: subscription
     destinationDataset:
-    - datasetReference:
-      - datasetId: destination_dataset
+      datasetReference:
+        datasetId: destination_dataset
         projectIdSelector:
           matchLabels:
             testing.upbound.io/example-name: subscription
@@ -60,7 +64,7 @@ metadata:
 spec:
   forProvider:
     bigqueryDataset:
-    - datasetSelector:
+      datasetSelector:
         matchLabels:
           testing.upbound.io/example-name: subscription
     dataExchangeIdSelector:
