--- a/examples-generated/cluster/networkconnectivity/v1beta1/group.yaml
+++ b/examples-generated/cluster/networkconnectivity/v1beta1/group.yaml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2025 The Crossplane Authors <https://crossplane.io>
+#
+# SPDX-License-Identifier: CC0-1.0
+
 apiVersion: networkconnectivity.gcp.upbound.io/v1beta1
 kind: Group
 metadata:
@@ -9,7 +13,7 @@ metadata:
 spec:
   forProvider:
     autoAccept:
-    - autoAcceptProjects:
+      autoAcceptProjects:
       - foo
       - bar
     description: A sample hub group
