add manual-intervention annotations for uptest
Signed-off-by: Jason Tang <jason@upbound.io>

--- a/examples/datastream/cluster/v1beta1/stream.yaml
+++ b/examples/datastream/cluster/v1beta1/stream.yaml
@@ -3,6 +3,7 @@ kind: Stream
 metadata:
   annotations:
     meta.upbound.io/example-id: datastream/v1beta1/stream
+    upjet.upbound.io/manual-intervention: "Requires IAM configuration for GCP service agents."
   labels:
     testing.upbound.io/example-name: default
   name: default
