--- a/examples-generated/namespaced/kms/v1beta1/keyhandle.yaml
+++ b/examples-generated/namespaced/kms/v1beta1/keyhandle.yaml
@@ -12,7 +12,8 @@ spec:
     location: global
     projectSelector:
       matchLabels:
-        testing.upbound.io/example-name: resource-project
+        testing.upbound.io/example-name: resource_project
+    provider: ${google-beta}
     resourceTypeSelector: storage.googleapis.com/Bucket
 
 ---
@@ -23,14 +24,17 @@ metadata:
   annotations:
     meta.upbound.io/example-id: kms/v1beta1/keyhandle
   labels:
-    testing.upbound.io/example-name: autokms-folder
+    testing.upbound.io/example-name: autokms_folder
   name: autokms-folder
   namespace: upbound-system
 spec:
   forProvider:
     deletionProtection: false
     displayName: my-folder
-    parent: organizations/${Rand.RFC1123Subdomain}
+    parentSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example
+    provider: ${google-beta}
 
 ---
 
@@ -40,18 +44,19 @@ metadata:
   annotations:
     meta.upbound.io/example-id: kms/v1beta1/keyhandle
   labels:
-    testing.upbound.io/example-name: key-project
+    testing.upbound.io/example-name: key_project
   name: key-project
   namespace: upbound-system
 spec:
   forProvider:
-    billingAccount: ${Rand.RFC1123Subdomain}
+    billingAccount: 000000-0000000-0000000-000000
     deletionPolicy: DELETE
     folderIdSelector:
       matchLabels:
-        testing.upbound.io/example-name: autokms-folder
-    name: key-proj-${Rand.RFC1123Subdomain}
-    projectId: key-proj-${Rand.RFC1123Subdomain}
+        testing.upbound.io/example-name: autokms_folder
+    name: key-proj
+    projectId: key-proj
+    provider: ${google-beta}
 
 ---
 
@@ -61,18 +66,19 @@ metadata:
   annotations:
     meta.upbound.io/example-id: kms/v1beta1/keyhandle
   labels:
-    testing.upbound.io/example-name: resource-project
+    testing.upbound.io/example-name: resource_project
   name: resource-project
   namespace: upbound-system
 spec:
   forProvider:
-    billingAccount: ${Rand.RFC1123Subdomain}
+    billingAccount: 000000-0000000-0000000-000000
     deletionPolicy: DELETE
     folderIdSelector:
       matchLabels:
-        testing.upbound.io/example-name: autokms-folder
-    name: res-proj-${Rand.RFC1123Subdomain}
-    projectId: res-proj-${Rand.RFC1123Subdomain}
+        testing.upbound.io/example-name: autokms_folder
+    name: res-proj
+    projectId: res-proj
+    provider: ${google-beta}
 
 ---
 
@@ -82,7 +88,7 @@ metadata:
   annotations:
     meta.upbound.io/example-id: kms/v1beta1/keyhandle
   labels:
-    testing.upbound.io/example-name: kms-api-service
+    testing.upbound.io/example-name: kms_api_service
   name: kms-api-service
   namespace: upbound-system
 spec:
@@ -91,5 +97,6 @@ spec:
     disableOnDestroy: false
     projectSelector:
       matchLabels:
-        testing.upbound.io/example-name: key-project
+        testing.upbound.io/example-name: key_project
+    provider: ${google-beta}
     service: cloudkms.googleapis.com
