--- a/.github/workflows/publish-provider-packages.yaml
+++ b/.github/workflows/publish-provider-packages.yaml
@@ -26,7 +26,7 @@ on:
 
 jobs:
   publish-provider-packages:
-    uses: crossplane-contrib/provider-workflows/.github/workflows/publish-provider-family.yml@main
+    uses: crossplane-contrib/provider-workflows/.github/workflows/publish-provider-family.yml@parallelize-mirroring
     with:
       subpackages: ${{ github.event.inputs.subpackages }}
       size: ${{ github.event.inputs.size }}
